--- a/project.html
+++ b/project.html
@@ -36,7 +36,9 @@
     </main>
 
     <div id="project-info-nav">
-        <!-- Project info items will be dynamically inserted here -->
+        <div class="project-info-container static">
+            <!-- Your project info content -->
+        </div>
     </div>
 
     <div id="related-projects" class="hidden">
