--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' chrome-extension:; connect-src 'self' chrome-extension:; style-src 'self' 'unsafe-inline';">
-    <title>Natalia Cornudella - Photography Portfolio</title>
+    <title>Natalia Cornudella</title>
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="assets/styles/slider.css">
     <link rel="stylesheet" href="assets/styles/information.css">
